--- a/chart.html
+++ b/chart.html
@@ -1,6 +1,16 @@
 <html>
   <head>
-  	<title>FBI Crime Categories -- Ona 2011 Example </title>
-  </head>
+		<title>FBI Crime Categories -- Ona 2011 Example </title>
 
+		<script type="text/javascript">
+			google.load('visualization', '1', {packages: ['corechart']});
+		</script>
+
+		<script type="text/javascript" src="chart.json></script>
+		<script type="text/javascript" src="crime-states.js"></script>
+	</head>
+
+	<body>
+		<div id='stacked_bar_chart></div>
+	</body>
 </html>
